addons/kyverno/policies/edtech-edtech_audit_logs_student_record_access-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: edtech-edtech_audit_logs_student_record_access
  annotations:
    rulehub.id: edtech.edtech_audit_logs_student_record_access
    rulehub.title: <Policy Title>
    rulehub.links: |
      - <https://reference-1>
      - <https://reference-2>
spec:
  validationFailureAction: audit # or enforce
  background: true
  rules:
  - name: <rule-name>
    match:
      any:
      - resources:
          kinds:
          - "*"
    validate:
      message: edtech.edtech_audit_logs_student_record_access: example validation
      pattern:
        metadata:
          labels:
            <required-label>: "?*"
